@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.4
+  *) [TS-1156] Fix timestamp log fields, and stop supporting network byte
+   order in various log buffers. See TS-1182 for future enhancements.
+
   *) [TS-1017] Update logging to be IPv6 compliant, including collation.
 
   *) [TS-1080] If we run out of Log Buffer slots, we assert.
